--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.2.6",
+    "mongodb": "^3.6.9",
     "next": "10.x",
+    "postcss": "^8.3.5",
     "react": "17.x",
-    "react-dom": "17.x"
+    "react-dom": "17.x",
+    "tailwindcss": "^2.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^15.12.2",
+    "@types/react": "^17.0.11",
+    "typescript": "^4.3.4"
   }
 }
