--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:ts": "yarn dev & yarn ts:watch",
+    "ts": "tsc --noEmit --incremental",
+    "ts:watch": "yarn ts --watch",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@types/mongodb": "^3.6.18",
     "autoprefixer": "^10.2.6",
     "mongodb": "^3.6.9",
     "next": "10.x",
