--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@types/mongodb": "^3.6.18",
+    "@types/mongoose": "^5.11.97",
     "autoprefixer": "^10.2.6",
     "mongodb": "^3.6.9",
+    "mongoose": "^5.12.14",
     "next": "10.x",
     "postcss": "^8.3.5",
     "react": "17.x",
